--- a/builder.toml
+++ b/builder.toml
@@ -29,11 +29,21 @@ description = "Ubuntu 22.04 Jammy Jellyfish base image with buildpacks for Java,
   version = "2.6.0"
 
 [[buildpacks]]
+  uri = "docker://gcr.io/paketo-buildpacks/ruby:0.20.0"
+  version = "0.20.0"
+
+[[buildpacks]]
   uri = "docker://gcr.io/paketo-buildpacks/web-servers:0.4.0"
   version = "0.4.0"
 
 [lifecycle]
   version = "0.15.2"
+
+[[order]]
+
+  [[order.group]]
+    id = "paketo-buildpacks/ruby"
+    version = "0.20.0"
 
 [[order]]
 
