--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,17 @@
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": [
         "github>paketo-buildpacks/github-config//renovate/renovate-default"
+    ],
+    "github-actions": {
+        "enabled": false
+    },
+    "packageRules": [
+        {
+            "matchManagers": [
+                "gomod"
+            ],
+            "groupName": "go-modules",
+            "groupTitle": "Bump the {{groupName}} with {{updates.length}} updates"
+        }
     ]
 }
