--- a/builder.toml
+++ b/builder.toml
@@ -36,6 +36,10 @@ description = "Ubuntu 22.04 Jammy Jellyfish base image with buildpacks for Java,
   uri = "docker://docker.io/paketobuildpacks/web-servers:4.0.3"
   version = "4.0.3"
 
+[[buildpacks]]
+  uri = "docker://ghcr.io/octopilot/rust:0.1.1"
+  version = "0.1.1"
+
 [lifecycle]
   version = "0.21.1"
 
@@ -92,6 +96,12 @@ description = "Ubuntu 22.04 Jammy Jellyfish base image with buildpacks for Java,
   [[order.group]]
     id = "paketo-buildpacks/procfile"
     version = "5.12.1"
+
+[[order]]
+
+  [[order.group]]
+    id = "octopilot/rust"
+    version = "0.1.1"
 
 [stack]
   build-image = "docker.io/paketobuildpacks/build-jammy-base:0.1.196"
