--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .bin/
+.local-buildpacks/
+builder-test.toml
 smoke/testdata/rust/target/
 smoke/testdata/rust/Cargo.lock
 smoke/testdata/rust-workspace/target
