--- a/builder.toml
+++ b/builder.toml
@@ -1,4 +1,4 @@
-description = "Ubuntu 22.04 Jammy Jellyfish base image with buildpacks for Java, Go, .NET Core, Node.js, Python, Apache HTTPD, NGINX and Procfile"
+description = "Ubuntu 22.04 Jammy Jellyfish base image with buildpacks for Java, Go, .NET Core, Node.js, Python, Apache HTTPD, NGINX, Procfile, Rust, and Helm chart OCI"
 
 [[buildpacks]]
   uri = "docker://docker.io/paketobuildpacks/dotnet-core:4.0.3"
@@ -106,4 +106,4 @@ description = "Ubuntu 22.04 Jammy Jellyfish base image with buildpacks for Java,
 [stack]
   build-image = "docker.io/paketobuildpacks/build-jammy-base:0.1.197"
   id = "io.buildpacks.stacks.jammy"
-  run-image = "index.docker.io/paketobuildpacks/run-jammy-base:latest"
+  run-image = "index.docker.io/paketobuildpacks/run-jammy-base:0.1.196"
